<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:backgroundTint="#ff000000"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textColor="#ff1eaf1d"
        android:textSize="@dimen/abc_action_button_min_width_material"
        android:fontFamily="Courier New"
        android:password="false"
        android:singleLine="false"
        android:phoneNumber="false"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/title"
        android:layout_above="@+id/title2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title2"
        android:textColor="#ff1eaf1d"
        android:textSize="@dimen/abc_action_button_min_width_material"
        android:fontFamily="Courier New"
        android:password="false"
        android:singleLine="false"
        android:phoneNumber="false"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/title2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title3"
        android:textColor="#ff1eaf1d"
        android:textSize="@dimen/abc_action_button_min_width_material"
        android:fontFamily="Courier New"
        android:password="false"
        android:singleLine="false"
        android:phoneNumber="false"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/title3"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadMacroListView"
        android:text="@string/begin_button_name"
        android:id="@+id/begin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minHeight="60dp"
        android:minWidth="120dp" />

</RelativeLayout>
